--- a/module-2-solution/styles.css
+++ b/module-2-solution/styles.css
@@ -1,58 +1,115 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Responsive Layout</title>
-<link rel="stylesheet" href="style.css">
-<style>
-
-/********** Base styles **********/
 * {
   box-sizing: border-box;
+  font-family: cursive;
+  border-radius: 5px;
+  border: 1px solid black;
 }
+
+html {
+  background-color: #79F6A7;
+  border:  0px;
+}
+
 h1 {
-  margin-bottom: 15px;
+  margin: 1%;
+  font-size:  3em;
+  text-align: center;
+  background-color: #E5FE43;
+  width: auto;
+  height: auto;
+  border: 0px;
+}
+
+body {
+  margin-left: 1%;
+  margin-right: 1%;
+  border: 0px;
 }
 
 div {
-  background-color: red;
-  padding: 20px;
+  font-size:  1.2em;
+  overflow: auto;
+  background-color: #3FBC69;
+  height: 500px;
+  margin-left: 5px;
+  margin-right:  5px;
+}
+
+aside {
+  padding: 5px;
+  float: left;
+  clear: left;
+  margin: 20px;
+  text-align: justify;
+  background-color: #C6F62B;
+}
+
+q {
+  border:0px;
+}
+
+/********** classes used **********/
+.menu {
+  overflow: auto;
+  width: 45%;
+  height: auto;
+  border: 1px solid black;
+  background-color:orange;
+  text-align: center;
+  float: right;
+  clear: right;
+  margin-bottom: 20px;
+  margin-right: 0;
+  padding: 0;
+  font-size:  1.6em;
+}
+
+.menu_item {
+  padding: 5px;
+
+  float: left;
+  color:  black;
+  clear: left;
+  margin-left: 20px;
+  margin-right: 10px;
+  margin-bottom: 20px;
+  width: 55%;
+  background-color: #79F6A7;
+  height:  auto;
 
 }
 
-p {
-  position: relative;
-  border: 5px solid black;
-  background-color: blue;
-  width: 90%;
-  height: 150px;
-  padding: 20px;
+.menu_price {
+  overflow: visible;
+  border-radius: 5px;
+  padding: 5px;
+  float:  right;
+  color:  black;
+  clear: right;
+  margin-left: 10px;
+  margin-right: 20px;
+  margin-bottom: 10px;
+  width: 25%;
+  background-color: #79F6A7;
+  height: auto;
+  text-align: right;
+}
 
-  margin-right: auto;
-  margin-left:auto;
-  font-family: Helvetica;
-  color: white;
+.pink {
+  background-color: lightpink;
+}
+
+.blue {
+  background-color: lightblue;
 }
 
 /* Simple Responsive Framework. */
-.container {
-  with:  100%;
-}
-
-.row {
-  width: 33.3%;
-}
-.correct {
-  width:  120%;
-}
 
 
 /********** Desktop Version **********/
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-    border: 1px solid green;
   }
   .col-lg-1 {
     width: 8.33%;
@@ -64,7 +121,8 @@ p {
     width: 25%;
   }
   .col-lg-4 {
-    width: 33.33%;
+    width: 31.33%;
+    margin: 1%;
   }
   .col-lg-5 {
     width: 41.66%;
@@ -96,7 +154,6 @@ p {
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
-    border: 1px solid green;
   }
   .col-md-1 {
     width: 8.33%;
@@ -114,7 +171,8 @@ p {
     width: 41.66%;
   }
   .col-md-6 {
-    width: 50%;
+    width: 48%;
+    margin: 1%;
   }
   .col-md-7 {
     width: 58.33%;
@@ -132,7 +190,8 @@ p {
     width: 91.66%;
   }
   .col-md-12 {
-    width: 100%;
+    width: 98%;
+    margin: 1%;
   }
 }
 
@@ -140,7 +199,6 @@ p {
 @media (max-width: 767px) {
   .col-sd-1, .col-sd-2, .col-sd-3, .col-sd-4, .col-sd-5, .col-sd-6, .col-sd-7, .col-sd-8, .col-sd-9, .col-sd-10, .col-sd-11, .col-sd-12 {
     float: left;
-    border: 1px solid green;
   }
   .col-sd-1 {
     width: 8.33%;
@@ -176,18 +234,8 @@ p {
     width: 91.66%;
   }
   .col-sd-12 {
-    width: 100%;
+    width: 98%;
+    margin: 1%;
 
   }
 }
-</style>
-</head>
-<body>
-<h1>Responsive Layout</h1>
-
-  <div class="col-lg-4 col-md-6 col-sd-12 container row"><p>Item 1</p></div>
-  <div class="col-lg-4 col-md-6 col-sd-12 container row"><p>Item 2</p></div>
-  <div class="col-lg-4 col-md-12 col-sd-12 container row "><p>Item 3</p></div>
-
-</body>
-</html>
