--- a/site/style.css
+++ b/site/style.css
@@ -7,13 +7,14 @@
 }
 
 html {
-  background-color: #79F6A7;
+  background-color: #B05050;
   border:  0px;
+  height: auto;
 }
 
 h1 {
   margin: 1%;
-  font-size:  3em;
+  font-size:  1.75em;
   text-align: center;
   background-color: #E5FE43;
   width: auto;
@@ -24,25 +25,16 @@ h1 {
 body {
   margin-left: 1%;
   margin-right: 1%;
+  margin-bottom: 1%;
   border: 0px;
+  margin-bottom: 1%;
 }
 
 div {
-  font-size:  1.2em;
+  font-size:  1em;
   overflow: auto;
   background-color: #3FBC69;
-  height: 500px;
-  margin-left: 5px;
-  margin-right:  5px;
-}
-
-aside {
-  padding: 5px;
-  float: left;
-  clear: left;
-  margin: 20px;
-  text-align: justify;
-  background-color: #C6F62B;
+  height: auto;
 }
 
 q {
@@ -58,42 +50,23 @@ q {
   text-align: center;
   float: right;
   clear: right;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   margin-right: 0;
   padding: 0;
-  font-size:  1.6em;
+  font-size:  1.25em;
 }
 
 .menu_item {
-  padding: 5px;
-
+  padding: 20px;
   float: left;
   color:  black;
   clear: left;
-  margin-left: 20px;
-  margin-right: 10px;
-  margin-bottom: 20px;
-  width: 55%;
+  width: auto;
   background-color: #79F6A7;
   height:  auto;
 
 }
 
-.menu_price {
-  overflow: visible;
-  border-radius: 5px;
-  padding: 5px;
-  float:  right;
-  color:  black;
-  clear: right;
-  margin-left: 10px;
-  margin-right: 20px;
-  margin-bottom: 10px;
-  width: 24%;
-  background-color: #79F6A7;
-  height: auto;
-  text-align: right;
-}
 
 .pink {
   background-color: lightpink;
